tests/ui/closures/return-type-doesnt-match-bound.stderr
error[E0271]: expected `{closure@return-type-doesnt-match-bound.rs:8:17}` to return `Result<(), _>`, but it returns `!`
  --> $DIR/return-type-doesnt-match-bound.rs:8:24
   |
LL |     f().or_else(|e| -> ! {
   |         ------- -------^
   |         |       |      |
   |         |       |      expected `Result<(), _>`, found `!`
   |         |       this closure
   |         required by a bound introduced by this call
   |
   = note: expected enum `Result<(), _>`
              found type `!`
note: required by a bound in `Result::<T, E>::or_else`
  --> $SRC_DIR/core/src/result.rs:LL:COL

error[E0271]: expected `{closure@return-type-doesnt-match-bound.rs:18:13}` to return `Result<(), _>`, but it returns `!`
  --> $DIR/return-type-doesnt-match-bound.rs:18:20
   |
LL |     let c = |e| -> ! {
   |             -------^
   |             |      |
   |             |      expected `Result<(), _>`, found `!`
   |             this closure
...
LL |     f().or_else(c);
   |         ------- - closure used here
   |         |
   |         required by a bound introduced by this call
   |
   = note: expected enum `Result<(), _>`
              found type `!`
note: required by a bound in `Result::<T, E>::or_else`
  --> $SRC_DIR/core/src/result.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
